[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Environment/Level1Boss.gd" type="Script" id=1]
[ext_resource path="res://Resources/Audio/FX/BossAlarm.wav" type="AudioStream" id=2]
[ext_resource path="res://Resources/Audio/FX/Old/Shootsound.wav" type="AudioStream" id=3]

[node name="Level1Boss" type="Node2D"]
position = Vector2( 58, 44 )
script = ExtResource( 1 )
missile_num = 140

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="BossAlarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 0.64
autoplay = true

[node name="MissileSpawnAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.66

[connection signal="timeout" from="MissileTimer" to="." method="_on_MissileTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
